<resources>
    <!--Strings for gui components -->
    <string name="app_name">Connect4</string>
    <string name="single">Singleplayer</string>
    <string name="multi">Multiplayer</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="play">Play Game</string>
    <string name="hint_ip">Enter server address</string>
    <string name="register_normal">Register</string>
    <string name="login_fb">Login with facebook</string>
    <string name="username_hint">Enter username or email</string>
    <string name="password_hint">Enter password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="register_username">Enter username</string>
    <string name="register_email">Enter email</string>
    <string name="verify_password">Verify password</string>
    <string name="register">Register</string>
    <string name="facebook_app_id">1749419555384450</string>
    <string name="continue_fb">Continue with fb account</string>
    <string name="reset_code">Enter reset code</string>
    <string name="enter_email">Enter email address</string>
    <string name="get_code">Get reset code</string>
    <string name="submit_code">Submit</string>
    <string name="play_button_text">PLAY</string>
</resources>
